n-vm-macros/tests/compile_fail/missing_test_attr.rs
// SPDX-License-Identifier: Apache-2.0
// Copyright Open Network Fabric Authors

#[n_vm::in_vm]
fn missing_test_attr() {}

fn main() {}
